--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* @font-face {
+    font-family: 'Pretendard';
+    src: url('/public/fonts/static/Pretendard-SemiBold.otf') format('truetype');
+    font-weight: 600;
+    font-style: normal;
+  }
+   */
